<resources>
    <string name="app_name">MyKey</string>
    <string name="set_master_title">设置管理密码</string>
    <string name="login_title">输入管理密码</string>
    <string name="password_label">主密码</string>
    <string name="confirm_password_label">确认主密码</string>
    <string name="confirm">确认</string>
    <string name="login">登录</string>
    <string name="password_not_match">两次密码不一致</string>
    <string name="password_empty">密码必填</string>
    <string name="password_wrong">密码错误</string>
    <string name="main_title">MyKey</string>
    <string name="search_hint">搜索密码标题、账号或备注...</string>
    <string name="add">新增</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="title_label">标题</string>
    <string name="account_label">账号/用户名</string>
    <string name="entry_password_label">密码</string>
    <string name="note_label">备注 (可选)</string>
    <string name="save">保存</string>
    <string name="show_password">显示密码</string>
    <string name="hide_password">隐藏密码</string>
    <string name="delete_confirm">确定删除该条目？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="set_master_desc">首次使用，请设置一个主密码来加密和保护您的所有密码数据。</string>
    <string name="unlock_desc">请输入您的主密码以解锁密码保险箱</string>
    <string name="enter_master_password">请输入主密码</string>
    <string name="enter_master_password_again">请再次输入主密码</string>
    <string name="setup_and_start">设置主密码并开始使用</string>
    <string name="unlock">解锁</string>
    <string name="copyright">Copyright @ Ferrychu</string>
    <string name="logout">退出登录</string>
    <string name="add_new_password">添加新密码</string>
    <string name="title_hint">请输入标题</string>
    <string name="account_hint">请输入账号或用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="note_hint">请输入备注信息</string>
    <string name="total_entries">总条目</string>
    <string name="recent_7_days">最近7天</string>
    <string name="weak_passwords">弱密码</string>
    <string name="title_required">标题必填</string>
    <string name="account_required">请输入账号</string>
    <string name="settings">设置</string>
    <string name="auto_lock">自动锁定</string>
    <string name="auto_lock_desc">应用切换到后台时自动锁定</string>
    <string name="change_master_password">修改主密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="change_password_success">密码修改成功</string>
    <string name="change_password_fail">原密码错误</string>
    <string name="no_passwords">暂无记录</string>
    <string name="no_passwords_desc">您还没有添加任何密码，请点击下方按钮添加第一个密码</string>
    <string name="no_search_results">没有和“%s”相关的记录</string>
    <string name="add_password">添加密码</string>
</resources>
